--- a/ConsisID_jupyter.ipynb
+++ b/ConsisID_jupyter.ipynb
@@ -150,6 +150,10 @@
     "    scheduler_args[\"variance_type\"] = variance_type\n",
     "pipe.scheduler = CogVideoXDPMScheduler.from_config(pipe.scheduler.config, **scheduler_args)\n",
     "pipe.to(device)\n",
+    "# pipe.enable_model_cpu_offload()\n",
+    "# pipe.enable_sequential_cpu_offload()\n",
+    "# pipe.vae.enable_slicing()\n",
+    "# pipe.vae.enable_tiling()\n",
     "upscale_model = load_sd_upscale(\"/content/model_real_esran/RealESRGAN_x4.pth\", device)\n",
     "frame_interpolation_model = load_rife_model(\"/content/model_rife\")\n",
     "\n",
@@ -188,12 +192,21 @@
     "                                                                            face_main_model, device, dtype, id_image, \n",
     "                                                                            original_id_image=id_image, is_align_face=True, \n",
     "                                                                            cal_uncond=False)\n",
-    "    kps_cond = face_kps if is_kps else None\n",
+    "    if is_kps:\n",
+    "        kps_cond = face_kps\n",
+    "    else:\n",
+    "        kps_cond = None\n",
+    "    tensor = align_crop_face_image.cpu().detach()\n",
+    "    tensor = tensor.squeeze()\n",
+    "    tensor = tensor.permute(1, 2, 0)\n",
+    "    tensor = tensor.numpy() * 255\n",
+    "    tensor = tensor.astype(np.uint8)\n",
+    "    image  = ImageOps.exif_transpose(Image.fromarray(tensor))\n",
     "    prompt = prompt.strip('\"')\n",
     "    generator = torch.Generator(device).manual_seed(seed) if seed else None\n",
     "    latents = pipe(\n",
     "        prompt=prompt,\n",
-    "        image=image_input,\n",
+    "        image=image,\n",
     "        num_videos_per_prompt=1,\n",
     "        num_inference_steps=num_inference_steps,\n",
     "        num_frames=49,\n",
@@ -205,14 +218,6 @@
     "        kps_cond=kps_cond,\n",
     "        output_type=\"pt\",\n",
     "    ).frames\n",
-    "\n",
-    "    scale_status = False\n",
-    "    rife_status = False\n",
-    "    if scale_status:\n",
-    "        latents = upscale_batch_and_concatenate(upscale_model, latents, device)\n",
-    "    if rife_status:\n",
-    "        latents = rife_inference_with_latents(frame_interpolation_model, latents)\n",
-    "\n",
     "    batch_size = latents.shape[0]\n",
     "    batch_video_frames = []\n",
     "    for batch_idx in range(batch_size):\n",
